add random joke and some refinement
